# SIC-XE-Assembler

./: CMakeLists.txt  README.md
inc/: assembler.h  op.h
src/: CMakeLists.txt  assembler.cpp  assembler_impl.cpp  op.cpp
tests/: basic.asm
